[~] style issues on almost all pages

--- a/templates/club/dojo.html.twig
+++ b/templates/club/dojo.html.twig
@@ -79,7 +79,7 @@
                         </iframe>
                     </div>
                 </div>
-                <h2>156 rue Charles Debierre Lille</h2>
+                <h2>156 rue Charles Debierre - Lille</h2>
             </div>
             <div class="col my-auto">
                 <h2>SALLE DEFAUCOMPRET</h2>
@@ -91,7 +91,7 @@
                         </iframe>
                     </div>
                 </div>
-                <h2>72-74 rue du Long Pot Lille</h2>
+                <h2>72-74 rue du Long Pot - Lille</h2>
             </div>
         </div>
     </div>
