--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -88,7 +88,7 @@
                         </iframe>
                     </div>
                 </div>
-                <h2>156 rue Charles Debierre Lille</h2>
+                <h2>156 rue Charles Debierre - Lille</h2>
             </div>
             <div class="col-xl-6 order-1 order-xl-2">
                 <div id="carouselAcceuilPosts" class="carousel slide d-none d-md-block" data-ride="carousel">
@@ -413,7 +413,7 @@
                         </iframe>
                     </div>
                 </div>
-                <h2>72-74 rue du Long Pot Lille</h2>
+                <h2>72-74 rue du Long Pot - Lille</h2>
             </div>
         </div>
         <div class="row text-center d-block d-md-none">
@@ -425,8 +425,9 @@
                         height="300"
                         allowfullscreen>
                 </iframe>
-                <h2>156 rue Charles Debierre Lille</h2>
+                <h2>156 rue Charles Debierre - Lille</h2>
             </div>
+            <hr style="border: 1px solid #A93514"/>
             <div class="col my-auto">
                 <h2>SALLE DEFAUCOMPRET</h2>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d894.800914630943!2d3.0873630056344954!3d50.62936125849722!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d5faea376d7d%3A0x4f55bddb5cd9f71d!2sEspace%20Sportif%20Defaucompret!5e0!3m2!1sfr!2sfr!4v1595857882269!5m2!1sfr!2sfr"
@@ -435,7 +436,7 @@
                         height="300"
                         allowfullscreen>
                 </iframe>
-                <h2>72-74 rue du Long Pot Lille</h2>
+                <h2>72-74 rue du Long Pot - Lille</h2>
             </div>
         </div>
     </div>
