--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,20 +15,11 @@
             a, a:hover {
                 color: #A93514;
             }
-            .black-hover {
+            .white-black-bold-on-hover {
                 color: white;
             }
-            .black-hover:hover {
+            .white-black-bold-on-hover:hover {
                 color: black;
-            }
-            .black-bold-hover {
-                color: white;
-            }
-            .black-bold-hover:hover {
-                color: black;
-                font-weight: bold;
-            }
-            .bold-hover:hover {
                 font-weight: bold;
             }
             .dropdown:hover .dropdown-menu{
@@ -39,9 +30,6 @@
             }
             .border {
                 border-width: 5px !important;
-            }
-            .border-little {
-                border-width: 2px !important;
             }
             .border-black {
                 border-color: black !important;
@@ -54,8 +42,8 @@
                 border-width: 5px !important;
                 background: white;
             }
-            @media (min-width: 992px) {
-                nav > div > ul > div > li {
+            @media (min-width: 1200px) {
+                nav > div > ul > li {
                     width: 130px;
                 }
             }
@@ -66,97 +54,90 @@
         <div class="flex-grow-1 flex-shrink-0">
             <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background: #A93514">
                 <a class="border border-black" href="{{ path('accueil') }}" style="background: white"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
-                <div class="w-100"></div>
-                <a href="{{ path('boutique') }}" class="d-none d-xl-block">
+                <div class="w-100 d-none d-xl-block"></div>
+                <a href="{{ path('boutique') }}">
                     <img src="{{ asset('assets/boutique-logo.png') }}"
-                         height="80"
+                         height="70"
                          alt="boutique_logo">
                 </a>
-                <div class="w-100"></div>
+                <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank" class="d-block d-lg-none">
+                    <img src="{{ asset('assets/fb_logo.png') }}"
+                         height="70"
+                         alt="fb_logo">
+                </a>
+                <div class="w-100 d-none d-xl-block"></div>
                 <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center text-center" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <div class="border border-little border-black">
-                            <li class="nav-item border border-white">
-                                <a class="nav-link" style="color: black; background: white" href="{{ path('accueil') }}">
-                                    Accueil
-                                </a>
-                            </li>
-                        </div>
-                        <div class="border border-little border-black">
-                            <li class="nav-item dropdown border border-white">
-                                <a class="nav-link dropdown-toggle" style="color: black; background: #ffde3d" id="navbarClubMenuLink"
-                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Club
-                                </a>
-                                <div class="dropdown-menu" style="background: #ffde3d" aria-labelledby="navbarClubMenuLink">
-                                    <a class="dropdown-item" href="{{ path('histoire') }}">Histoire</a>
-                                    <a class="dropdown-item" href="{{ path('enseignants') }}">Les Enseignants</a>
-                                    <a class="dropdown-item" href="{{ path('bureau') }}">Bureau</a>
-                                    <a class="dropdown-item" href="{{ path('contact') }}">Contact</a>
-                                    <a class="dropdown-item" href="{{ path('dojo') }}">Dojo</a>
-                                    <a class="dropdown-item" href="{{ path('palmares') }}">Palmarès</a>
-                                </div>
-                            </li>
-                        </div>
-                        <div class="border border-little border-black">
-                            <li class="nav-item dropdown border border-white">
-                                <a class="nav-link dropdown-toggle" style="color: black; background: orange" id="navbarDisciplinesMenuLink"
-                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Disciplines
-                                </a>
-                                <div class="dropdown-menu" style="background: orange" aria-labelledby="navbarDisciplinesMenuLink">
-                                    <a class="dropdown-item" href="{{ path('judo') }}">Judo</a>
-                                    <a class="dropdown-item" href="{{ path('ju-jitsu') }}">Ju Jitsu</a>
-                                    <a class="dropdown-item" href="{{ path('taiso') }}">Taiso</a>
-                                    <a class="dropdown-item" href="{{ path('ne-waza') }}">Ne Waza</a>
-                                </div>
-                            </li>
-                        </div>
-                        <div class="border border-little border-black">
-                            <li class="nav-item dropdown border border-white">
-                                <a class="nav-link dropdown-toggle" style="color: black; background: #489343" id="navbarInscriptionMenuLink"
-                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Inscription
-                                </a>
-                                <div class="dropdown-menu" style="background: #489343" aria-labelledby="navbarInscriptionMenuLink">
-                                    <a class="dropdown-item" href="{{ path('adhesion') }}">Adhésion</a>
-                                    <a class="dropdown-item" href="{{ path('competitions') }}">Compétitions</a>
-                                </div>
-                            </li>
-                        </div>
-                        <div class="border border-little border-black">
-                            <li class="nav-item dropdown border border-white">
-                                <a class="nav-link dropdown-toggle" style="color: black; background: #0B70C0" id="navbarActualitesMenuLink"
-                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Actualités
-                                </a>
-                                <div class="dropdown-menu" style="background: #0B70C0" aria-labelledby="navbarActualitesMenuLink">
-                                    <a class="dropdown-item" href="{{ path('calendrier') }}">Calendrier</a>
-                                    <a class="dropdown-item" href="{{ path('actualites-club') }}">Actualités Club</a>
-                                    <a class="dropdown-item" href="{{ path('actualites-nationale-internationale') }}">Actualités Nationale/Internationale</a>
-                                </div>
-                            </li>
-                        </div>
-                        <div class="border border-little border-black">
-                            <li class="nav-item border border-white">
-                                <a class="nav-link" style="color: white; background: #503D07" href="{{ path('documents') }}">
-                                    Documents
-                                </a>
-                            </li>
-                        </div>
+                        <li class="nav-item border border-black">
+                            <a class="nav-link" style="color: black; background: white" href="{{ path('accueil') }}">
+                                Accueil
+                            </a>
+                        </li>
+                        <li class="nav-item dropdown border border-black">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: #ffde3d" id="navbarClubMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Club
+                            </a>
+                            <div class="dropdown-menu" style="background: #ffde3d" aria-labelledby="navbarClubMenuLink">
+                                <a class="dropdown-item" href="{{ path('histoire') }}">Histoire</a>
+                                <a class="dropdown-item" href="{{ path('enseignants') }}">Les Enseignants</a>
+                                <a class="dropdown-item" href="{{ path('bureau') }}">Bureau</a>
+                                <a class="dropdown-item" href="{{ path('contact') }}">Contact</a>
+                                <a class="dropdown-item" href="{{ path('dojo') }}">Dojo</a>
+                                <a class="dropdown-item" href="{{ path('palmares') }}">Palmarès</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown border border-black">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: orange" id="navbarDisciplinesMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Disciplines
+                            </a>
+                            <div class="dropdown-menu" style="background: orange" aria-labelledby="navbarDisciplinesMenuLink">
+                                <a class="dropdown-item" href="{{ path('judo') }}">Judo</a>
+                                <a class="dropdown-item" href="{{ path('ju-jitsu') }}">Ju Jitsu</a>
+                                <a class="dropdown-item" href="{{ path('taiso') }}">Taiso</a>
+                                <a class="dropdown-item" href="{{ path('ne-waza') }}">Ne Waza</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown border border-black">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: #489343" id="navbarInscriptionMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Inscription
+                            </a>
+                            <div class="dropdown-menu" style="background: #489343" aria-labelledby="navbarInscriptionMenuLink">
+                                <a class="dropdown-item" href="{{ path('adhesion') }}">Adhésion</a>
+                                <a class="dropdown-item" href="{{ path('competitions') }}">Compétitions</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown border border-black">
+                            <a class="nav-link dropdown-toggle" style="color: black; background: #0B70C0" id="navbarActualitesMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Actualités
+                            </a>
+                            <div class="dropdown-menu" style="background: #0B70C0" aria-labelledby="navbarActualitesMenuLink">
+                                <a class="dropdown-item" href="{{ path('calendrier') }}">Calendrier</a>
+                                <a class="dropdown-item" href="{{ path('actualites-club') }}">Actualités Club</a>
+                                <a class="dropdown-item" href="{{ path('actualites-nationale-internationale') }}">Actualités Nationale/Internationale</a>
+                            </div>
+                        </li>
+                        <li class="nav-item border border-black">
+                            <a class="nav-link" style="color: white; background: #503D07" href="{{ path('documents') }}">
+                                Documents
+                            </a>
+                        </li>
                     </ul>
                 </div>
-                <div class="w-100"></div>
-                <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank" class="d-none d-xl-block">
+                <div class="w-100 d-none d-xl-block"></div>
+                <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank" class="d-none d-lg-block">
                     <img src="{{ asset('assets/fb_logo.png') }}"
-                         height="80"
+                         height="70"
                          alt="fb_logo">
                 </a>
-                <div class="w-100"></div>
+                <div class="w-100 d-none d-xl-block"></div>
                 <div class="d-none d-lg-block">
                     <form class="form-inline">
                         <a class="border border-black" href="{{ path('accueil') }}" style="background: white"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
@@ -164,34 +145,15 @@
                 </div>
             </nav>
             <div style="background: #A93514">
-                <div class="container-fluid d-block d-xl-none">
-                    <div class="row text-center justify-content-center">
-                        <div class="col my-auto">
-                            <a href="{{ path('boutique') }}">
-                                <img src="{{ asset('assets/boutique-logo.png') }}"
-                                     height="100"
-                                     alt="">
-                            </a>
-                        </div>
-                        <div class="col my-auto">
-                            <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/" target="_blank">
-                                <img src="{{ asset('assets/fb_logo.png') }}"
-                                     height="100"
-                                     width="100"
-                                     alt="fb_logo">
-                            </a>
-                        </div>
-                    </div>
-                </div>
                 <div class="container-fluid">
                     <div class="row text-center justify-content-center">
                         <div class="col d-md-none d-block">
                             <h1 class="text-center text-white" style="color: black"><strong>LILLE UNIVERSITE CLUB</strong><br/>
                                 <small class="text-white">
-                                    <a href="{{ path('judo') }}" class="text-white">JUDO</a>
-                                    <a href="{{ path('ju-jitsu') }}" class="text-white">JUJITSU</a>
-                                    <a href="{{ path('taiso') }}" class="text-white">TAISO</a>
-                                    <a href="{{ path('ne-waza') }}" class="text-white">NEWAZA</a>
+                                    <a href="{{ path('judo') }}" class="white-black-bold-on-hover">JUDO</a>
+                                    <a href="{{ path('ju-jitsu') }}" class="white-black-bold-on-hover">JUJITSU</a>
+                                    <a href="{{ path('taiso') }}" class="white-black-bold-on-hover">TAISO</a>
+                                    <a href="{{ path('ne-waza') }}" class="white-black-bold-on-hover">NEWAZA</a>
                                 </small>
                             </h1>
                         </div>
@@ -207,28 +169,28 @@
                         <div class="col">
                             <h1 class="display-3">
                                 <small>
-                                    <a href="{{ path('judo') }}" class="black-hover">JUDO</a>
+                                    <a href="{{ path('judo') }}" class="white-black-bold-on-hover">JUDO</a>
                                 </small>
                             </h1>
                         </div>
                         <div class="col">
                             <h1 class="display-3">
                                 <small>
-                                    <a href="{{ path('ju-jitsu') }}" class="text-white bold-hover">JUJITSU</a>
+                                    <a href="{{ path('ju-jitsu') }}" class="white-black-bold-on-hover">JUJITSU</a>
                                 </small>
                             </h1>
                         </div>
                         <div class="col">
                             <h1 class="display-3">
                                 <small>
-                                    <a href="{{ path('taiso') }}" class="black-bold-hover">TAISO</a>
+                                    <a href="{{ path('taiso') }}" class="white-black-bold-on-hover">TAISO</a>
                                 </small>
                             </h1>
                         </div>
                         <div class="col">
                             <h1 class="display-3">
                                 <small>
-                                    <a href="{{ path('ne-waza') }}" class="text-white">NEWAZA</a>
+                                    <a href="{{ path('ne-waza') }}" class="white-black-bold-on-hover">NEWAZA</a>
                                 </small>
                             </h1>
                         </div>
@@ -300,14 +262,14 @@
             {% else %}
                 <br/>
             {% endif %}
-            <div class="container">
-                {{ wo_render_breadcrumbs() }}
-            </div>
             {% for message in app.flashes('success') %}
                 <div class="alert alert-success">
                     {{ message }}
                 </div>
             {% endfor %}
+            <div class="container">
+                {{ wo_render_breadcrumbs() }}
+            </div>
             {% block body %}{% endblock %}
         </div>
         <hr/>
@@ -347,6 +309,7 @@
                                  alt="logo_FFJDA">
                         </a>
                     </div>
+                    <div class="w-100 d-block d-sm-none"></div>
                     <div class="col my-auto">
                         <a href="https://www.agilim.fr/" target="_blank">
                             <img src="{{ asset('assets/logo_agilim.png') }}"
@@ -363,6 +326,15 @@
                                  height="180"
                                  width="146"
                                  alt="logo_MEL">
+                        </a>
+                    </div>
+                    <div class="col my-auto">
+                        <a href="https://www.hautsdefrance.fr/" target="_blank">
+                            <img src="{{ asset('assets/LogoRégionHDF.png') }}"
+                                 class="img-fluid"
+                                 height="200"
+                                 width="200"
+                                 alt="logo_HDF">
                         </a>
                     </div>
                 </div>
