--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -154,7 +154,7 @@
                                     </iframe>
                                 </div>
                             </div>
-                            <h2>156 rue Charles Debierre Lille</h2>
+                            <h2>156 rue Charles Debierre - Lille</h2>
                         </div>
                         <div class="col my-auto">
                             <h2>SALLE DEFAUCOMPRET</h2>
@@ -166,7 +166,7 @@
                                     </iframe>
                                 </div>
                             </div>
-                            <h2>72-74 rue du Long Pot Lille</h2>
+                            <h2>72-74 rue du Long Pot - Lille</h2>
                         </div>
                     </div>
                 </div>
