--- a/templates/disciplines/taiso.html.twig
+++ b/templates/disciplines/taiso.html.twig
@@ -111,7 +111,7 @@
                                     </iframe>
                                 </div>
                             </div>
-                            <h2>72-74 rue du Long Pot Lille</h2>
+                            <h2>72-74 rue du Long Pot - Lille</h2>
                         </div>
                     </div>
                 </div>
