--- a/templates/inscription/adhesion.html.twig
+++ b/templates/inscription/adhesion.html.twig
@@ -12,24 +12,32 @@
 
 {% block body %}
     <div class="container">
-        <ul class="nav nav-tabs flex-column flex-lg-row" id="adhesionImagesTab" role="tablist">
+        <ul class="nav nav-tabs flex-column flex-lg-row justify-content-center" id="adhesionImagesTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="avant-tab" data-toggle="tab" href="#avant" aria-controls="avant" aria-selected="true">
                     <h3 class="text-center">Avant</h3>
-                    <img class="octagon img-fluid" src="https://dummyimage.com/280x280/000000/fff" alt="">
+                    <img class="octagon img-fluid"
+                         src="{{ asset('assets/minionsTests.jpg') }}"
+                         height="280"
+                         alt="">
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="pendant-tab" data-toggle="tab" href="#pendant" aria-controls="pendant" aria-selected="true">
                     <h3 class="text-center">Pendant</h3>
-                    <img class="octagon img-fluid" src="https://dummyimage.com/280x280/000000/fff" alt="">
+                    <img class="octagon img-fluid"
+                         src="{{ asset('assets/minionsTests.jpg') }}"
+                         height="280"
+                         alt="">
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="apres-tab" data-toggle="tab" href="#apres" aria-controls="apres" aria-selected="true">
                     <h3 class="text-center">Après</h3>
-{#                    <img class="octagon img-fluid" src="{{ asset('assets/minionsTests.jpg') }}" alt="">#}
-                    <img class="octagon img-fluid" src="https://dummyimage.com/280x280/000000/fff" alt="">
+                    <img class="octagon img-fluid"
+                         src="{{ asset('assets/minionsTests.jpg') }}"
+                         height="280"
+                         alt="">
                 </a>
             </li>
         </ul>
