[~] idegrams on base smaller

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -201,51 +201,49 @@
                         <div class="row text-center justify-content-center">
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/politesse.png') }}"
-                                         class="figure-img"
-                                         alt="Politesse idéogramme">
+                                    <img src="{{ asset('assets/politesse.png') }}" class="figure-img" height="70" alt="Politesse idéogramme">
                                     <figcaption class="figure-caption text-white">Politesse</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/courage.png') }}" class="figure-img" alt="Courage idéogramme">
+                                    <img src="{{ asset('assets/courage.png') }}" class="figure-img" height="70" alt="Courage idéogramme">
                                     <figcaption class="figure-caption text-white">Courage</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/sincerite.png') }}" class="figure-img" alt="Sincérité idéogramme">
+                                    <img src="{{ asset('assets/sincerite.png') }}" class="figure-img" height="70" alt="Sincérité idéogramme">
                                     <figcaption class="figure-caption text-white">Sincérité</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/honneur.png') }}" class="figure-img" alt="Honneur idéogramme">
+                                    <img src="{{ asset('assets/honneur.png') }}" class="figure-img" height="70" alt="Honneur idéogramme">
                                     <figcaption class="figure-caption text-white">Honneur</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/modestie.png') }}" class="figure-img" alt="Modestie idéogramme">
+                                    <img src="{{ asset('assets/modestie.png') }}" class="figure-img" height="70" alt="Modestie idéogramme">
                                     <figcaption class="figure-caption text-white">Modestie</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/respect.png') }}" class="figure-img" alt="Respect idéogramme">
+                                    <img src="{{ asset('assets/respect.png') }}" class="figure-img" height="70" alt="Respect idéogramme">
                                     <figcaption class="figure-caption text-white">Respect</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/controle-de-soi.png') }}" class="figure-img" alt="Contrôle de soi idéogramme">
+                                    <img src="{{ asset('assets/controle-de-soi.png') }}" class="figure-img" height="70" alt="Contrôle de soi idéogramme">
                                     <figcaption class="figure-caption text-white">Contrôle de soi</figcaption>
                                 </figure>
                             </div>
                             <div class="col">
                                 <figure class="figure">
-                                    <img src="{{ asset('assets/amitie.png') }}" class="figure-img" alt="Amitié idéogramme">
+                                    <img src="{{ asset('assets/amitie.png') }}" class="figure-img" height="70" alt="Amitié idéogramme">
                                     <figcaption class="figure-caption text-white">Amitié</figcaption>
                                 </figure>
                             </div>
