[+~] add a lot of stuff and modify some in order to maybe finish project

--- a/templates/actualites/evenements.html.twig
+++ b/templates/actualites/evenements.html.twig
@@ -12,6 +12,9 @@
     <div class="container">
         <div id="calendar-holder">
         </div>
+        <h2 class="text-center">
+            Télécharger le calendrier synthétisé <strong><a href="{{ path('calendrierDocument') }}" target="_blank">ici</a></strong>
+        </h2>
     </div>
 {% endblock %}
 
