--- a/templates/inscription/adhesion.html.twig
+++ b/templates/inscription/adhesion.html.twig
@@ -12,6 +12,9 @@
 
 {% block body %}
     <div class="container">
+        <h2 class="text-center">
+            Tu veux te joindre à nous ? Télécharge la fiche d'inscription <strong><a href="{{ path('downloadInscription') }}" target="_blank">ici</a></strong> !
+        </h2>
         <ul class="nav nav-tabs flex-column flex-lg-row justify-content-center" id="adhesionImagesTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="avant-tab" data-toggle="tab" href="#avant" aria-controls="avant" aria-selected="true">
@@ -44,49 +47,241 @@
         <div class="tab-content" id="adhesionImagesTabContent">
             <div id="avant" class="tab-pane fade show active" role="tabpanel" aria-labelledby="avant-tab">
                 <h3>Avant</h3>
-                <p>
-                    Je prépare dans mon sac mes affaires:
-                </p>
-                <ul class="nav nav-tabs flex-column flex-lg-row" id="adhesionImageAffairesTab" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="judo-tab" data-toggle="tab" href="#judo" aria-controls="judo" aria-selected="true">Judo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="jujitsu-tab" data-toggle="tab" href="#jujitsu" aria-controls="jujitsu" aria-selected="false">Ju Jitsu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="taiso-tab" data-toggle="tab" href="#taiso" aria-controls="taiso" aria-selected="false">Taiso</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="newaza-tab" data-toggle="tab" href="#newaza" aria-controls="newaza" aria-selected="false">Ne Waza</a>
-                    </li>
+                {% if inscriptionAvantTexte %}
+                    {{ inscriptionAvantTexte.texte|raw }}
+                {% else %}
+                    <p>
+                        no text
+                    </p>
+                {% endif %}
+                {% if inscriptionAvantPhotos %}
+                    <h3>Photos</h3>
+                    <div class="row text-center justify-content-center">
+                        {% for inscriptionAvantPhoto in inscriptionAvantPhotos %}
+                            <div class="col-lg-3 col-md-4 col-6">
+                                <a href="{{ asset('uploads/inscription_avant/') }}{{ inscriptionAvantPhoto.image }}" data-toggle="lightbox">
+                                    <img class="img-fluid img-thumbnail" src="{{ asset('uploads/inscription_avant/') }}{{ inscriptionAvantPhoto.image }}" alt="">
+                                </a>
+                            </div>
+                        {% else %}
+                            <div>
+                                no records found
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+                {% if inscriptionAvantDocuments %}
+                    <h3>Documents</h3>
+                    <ul>
+                        {% for inscriptionAvantDocument in inscriptionAvantDocuments %}
+                            <li>
+                                {{ inscriptionAvantDocument.titre }}: <a href="{{ asset('uploads/inscription_avant/') }}{{ inscriptionAvantDocument.document }}" target="_blank">Voir Document</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+                <ul class="nav nav-tabs flex-column flex-lg-row" id="inscriptionApresCategorie" role="tablist">
+                    {% if inscriptionAvantCategorieFirst %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link active" id="{{ inscriptionAvantCategorieFirst.id }}-tab" data-toggle="tab" href="#{{ inscriptionAvantCategorieFirst.id }}" aria-controls="{{ inscriptionAvantCategorieFirst.id }}" aria-selected="true">{{ inscriptionAvantCategorieFirst.categorie }}</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link active" id="none-tab" data-toggle="tab" href="#none" aria-controls="non" aria-selected="true">none</a>
+                        </li>
+                    {% endif %}
+                    {% for inscriptionAvantCategorie in inscriptionAvantCategories %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link" id="{{ inscriptionAvantCategorie.id }}-tab" data-toggle="tab" href="#{{ inscriptionAvantCategorie.id }}" aria-controls="{{ inscriptionAvantCategorie.id }}" aria-selected="false">{{ inscriptionAvantCategorie.categorie }}</a>
+                        </li>
+                    {% endfor %}
                 </ul>
-                <div class="tab-content" id="adhesionImageAffairesTabContent">
-                    <div id="judo" class="tab-pane fade show active" role="tabpanel" aria-labelledby="judo-tab">
-                        <ul>
-                            <li>Mon judogi</li>
-                            <li>Mes zoories ou tongs</li>
-                            <li>Ma ceinture</li>
-                            <li>Ma bouteille d'eau</li>
-                        </ul>
-                    </div>
-                    <div id="jujitsu" class="tab-pane fade" role="tabpanel" aria-labelledby="jujitsu-tab">
-                    </div>
-                    <div id="taiso" class="tab-pane fade" role="tabpanel" aria-labelledby="taiso-tab">
-                    </div>
-                    <div id="newaza" class="tab-pane fade" role="tabpanel" aria-labelledby="newaza-tab">
-                    </div>
+                <div class="tab-content" id="inscriptionApresCategorie">
+                    {% if inscriptionAvantCategorieFirst %}
+                        <div id="{{ inscriptionAvantCategorieFirst.id }}" class="tab-pane fade show active" role="tabpanel" aria-labelledby="{{ inscriptionAvantCategorieFirst.id }}-tab">
+                            <h3>{{ inscriptionAvantCategorieFirst.categorie }}</h3>
+                            <p>
+                                {{ inscriptionAvantCategorieFirst.texte|raw }}
+                            </p>
+                        </div>
+                    {% else %}
+                        <div id="none" class="tab-pane fade show active" role="tabpanel" aria-labelledby="none-tab">
+                            <p>
+                                no records found
+                            </p>
+                        </div>
+                    {% endif %}
+                    {% for inscriptionAvantCategorie in inscriptionAvantCategories %}
+                        <div id="{{ inscriptionAvantCategorie.id }}" class="tab-pane fade" role="tabpanel" aria-labelledby="{{ inscriptionAvantCategorie.id }}-tab">
+                            <h3>{{ inscriptionAvantCategorie.categorie }}</h3>
+                            <p>
+                                {{ inscriptionAvantCategorie.texte|raw }}
+                            </p>
+                        </div>
+                    {% endfor %}
                 </div>
             </div>
             <div id="pendant" class="tab-pane fade" role="tabpanel" aria-labelledby="pendant-tab">
                 <h3>Pendant</h3>
+                {% if inscriptionPendantTexte %}
+                    {{ inscriptionPendantTexte.texte|raw }}
+                {% else %}
+                    <p>
+                        no text
+                    </p>
+                {% endif %}
+                {% if inscriptionPendantPhotos %}
+                    <h3>Photos</h3>
+                    <div class="row text-center justify-content-center">
+                        {% for inscriptionPendantPhoto in inscriptionPendantPhotos %}
+                            <div class="col-lg-3 col-md-4 col-6">
+                                <a href="{{ asset('uploads/inscription_pendant/') }}{{ inscriptionPendantPhotos.image }}" data-toggle="lightbox">
+                                    <img class="img-fluid img-thumbnail" src="{{ asset('uploads/inscription_pendant/') }}{{ inscriptionPendantPhotos.image }}" alt="">
+                                </a>
+                            </div>
+                        {% else %}
+                            <div>
+                                no records found
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+                {% if inscriptionPendantDocuments %}
+                    <h3>Documents</h3>
+                    <ul>
+                        {% for inscriptionPendantDocument in inscriptionPendantDocuments %}
+                            <li>
+                                {{ inscriptionPendantDocument.titre }}: <a href="{{ asset('uploads/inscription_pendant/') }}{{ inscriptionPendantDocument.document }}" target="_blank">Voir Document</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+                <ul class="nav nav-tabs flex-column flex-lg-row" id="inscriptionPendantCategorie" role="tablist">
+                    {% if inscriptionPendantCategorieFirst %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link active" id="{{ inscriptionPendantCategorieFirst.id }}-tab" data-toggle="tab" href="#{{ inscriptionPendantCategorieFirst.id }}" aria-controls="{{ inscriptionPendantCategorieFirst.id }}" aria-selected="true">{{ inscriptionPendantCategorieFirst.categorie }}</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link active" id="none-tab" data-toggle="tab" href="#none" aria-controls="non" aria-selected="true">none</a>
+                        </li>
+                    {% endif %}
+                    {% for inscriptionPendantCategorie in inscriptionPendantCategories %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link" id="{{ inscriptionPendantCategorie.id }}-tab" data-toggle="tab" href="#{{ inscriptionPendantCategorie.id }}" aria-controls="{{ inscriptionPendantCategorie.id }}" aria-selected="false">{{ inscriptionPendantCategorie.categorie }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <div class="tab-content" id="inscriptionPendantCategorie">
+                    {% if inscriptionPendantCategorieFirst %}
+                        <div id="{{ inscriptionPendantCategorieFirst.id }}" class="tab-pane fade show active" role="tabpanel" aria-labelledby="{{ inscriptionPendantCategorieFirst.id }}-tab">
+                            <h3>{{ inscriptionPendantCategorieFirst.categorie }}</h3>
+                            <p>
+                                {{ inscriptionPendantCategorieFirst.texte|raw }}
+                            </p>
+                        </div>
+                    {% else %}
+                        <div id="none" class="tab-pane fade show active" role="tabpanel" aria-labelledby="none-tab">
+                            <p>
+                                no records found
+                            </p>
+                        </div>
+                    {% endif %}
+                    {% for inscriptionPendantCategorie in inscriptionPendantCategories %}
+                        <div id="{{ inscriptionPendantCategorie.id }}" class="tab-pane fade" role="tabpanel" aria-labelledby="{{ inscriptionPendantCategorie.id }}-tab">
+                            <h3>{{ inscriptionPendantCategorie.categorie }}</h3>
+                            <p>
+                                {{ inscriptionPendantCategorie.texte|raw }}
+                            </p>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
             <div id="apres" class="tab-pane fade" role="tabpanel" aria-labelledby="apres-tab">
                 <h3>Après</h3>
+                {% if inscriptionApresTexte %}
+                    {{ inscriptionApresTexte.texte|raw }}
+                {% else %}
+                    <p>
+                        no text
+                    </p>
+                {% endif %}
+                {% if inscriptionApresPhotos %}
+                    <h3>Photos</h3>
+                    <div class="row text-center justify-content-center">
+                        {% for inscriptionApresPhoto in inscriptionApresPhotos %}
+                            <div class="col-lg-3 col-md-4 col-6">
+                                <a href="{{ asset('uploads/inscription_apres/') }}{{ inscriptionApresPhoto.image }}" data-toggle="lightbox">
+                                    <img class="img-fluid img-thumbnail" src="{{ asset('uploads/inscription_apres/') }}{{ inscriptionApresPhoto.image }}" alt="">
+                                </a>
+                            </div>
+                        {% else %}
+                            <div>
+                                no records found
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+                {% if inscriptionApresDocuments %}
+                    <h3>Documents</h3>
+                    <ul>
+                        {% for inscriptionApresDocument in inscriptionApresDocuments %}
+                            <li>
+                                {{ inscriptionApresDocument.titre }}: <a href="{{ asset('uploads/inscription_apres/') }}{{ inscriptionApresDocument.document }}" target="_blank">Voir Document</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+                <ul class="nav nav-tabs flex-column flex-lg-row" id="inscriptionApresCategorie" role="tablist">
+                    {% if inscriptionApresCategorieFirst %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link active" id="{{ inscriptionApresCategorieFirst.id }}-tab" data-toggle="tab" href="#{{ inscriptionApresCategorieFirst.id }}" aria-controls="{{ inscriptionApresCategorieFirst.id }}" aria-selected="true">{{ inscriptionApresCategorieFirst.categorie }}</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link active" id="none-tab" data-toggle="tab" href="#none" aria-controls="non" aria-selected="true">none</a>
+                        </li>
+                    {% endif %}
+                    {% for inscriptionApresCategorie in inscriptionApresCategories %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link" id="{{ inscriptionApresCategorie.id }}-tab" data-toggle="tab" href="#{{ inscriptionApresCategorie.id }}" aria-controls="{{ inscriptionApresCategorie.id }}" aria-selected="false">{{ inscriptionApresCategorie.categorie }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <div class="tab-content" id="inscriptionApresCategorie">
+                    {% if inscriptionApresCategorieFirst %}
+                        <div id="{{ inscriptionApresCategorieFirst.id }}" class="tab-pane fade show active" role="tabpanel" aria-labelledby="{{ inscriptionApresCategorieFirst.id }}-tab">
+                            <h3>{{ inscriptionApresCategorieFirst.categorie }}</h3>
+                            <p>
+                                {{ inscriptionApresCategorieFirst.texte|raw }}
+                            </p>
+                        </div>
+                    {% else %}
+                        <div id="none" class="tab-pane fade show active" role="tabpanel" aria-labelledby="none-tab">
+                            <p>
+                                no records found
+                            </p>
+                        </div>
+                    {% endif %}
+                    {% for inscriptionApresCategorie in inscriptionApresCategories %}
+                        <div id="{{ inscriptionApresCategorie.id }}" class="tab-pane fade" role="tabpanel" aria-labelledby="{{ inscriptionApresCategorie.id }}-tab">
+                            <h3>{{ inscriptionApresCategorie.categorie }}</h3>
+                            <p>
+                                {{ inscriptionApresCategorie.texte|raw }}
+                            </p>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
-        <h2 class="text-center">
-            Tu veux te joindre à nous ? Télécharge la fiche d'inscription <strong><a href="{{ path('downloadInscription') }}" target="_blank">ici</a></strong> !
-        </h2>
     </div>
+{% endblock %}
+{% block javascripts %}
+    <script>
+        $(document).on('click', '[data-toggle="lightbox"]', function(event) {
+            event.preventDefault();
+            $(this).ekkoLightbox();
+        });
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
 {% endblock %}
