--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,12 @@
                 background: lightgray;
             }
             .border {
-                border-width: 5px !important;
+                border-width: 3px !important;
+            }
+            @media (max-width: 768px) {
+                .border {
+                    border-width: 5px !important;
+                }
             }
             .border-black {
                 border-color: black !important;
