--- a/templates/inscription/adhesion.html.twig
+++ b/templates/inscription/adhesion.html.twig
@@ -19,27 +19,30 @@
             <li class="nav-item">
                 <a class="nav-link active" id="avant-tab" data-toggle="tab" href="#avant" aria-controls="avant" aria-selected="true">
                     <h3 class="text-center">Avant</h3>
-                    <img class="octagon img-fluid"
+                    <img class="octagon"
                          src="{{ asset('assets/minionsTests.jpg') }}"
                          height="280"
+                         width="280"
                          alt="">
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="pendant-tab" data-toggle="tab" href="#pendant" aria-controls="pendant" aria-selected="true">
                     <h3 class="text-center">Pendant</h3>
-                    <img class="octagon img-fluid"
-                         src="{{ asset('assets/minionsTests.jpg') }}"
+                    <img class="octagon"
+                         src="{{ asset('assets/lapinsTest.png') }}"
                          height="280"
+                         width="280"
                          alt="">
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="apres-tab" data-toggle="tab" href="#apres" aria-controls="apres" aria-selected="true">
                     <h3 class="text-center">Après</h3>
-                    <img class="octagon img-fluid"
+                    <img class="octagon"
                          src="{{ asset('assets/minionsTests.jpg') }}"
                          height="280"
+                         width="280"
                          alt="">
                 </a>
             </li>
