[+] red line between map when mobile

--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -156,6 +156,9 @@
                             </div>
                             <h2>156 rue Charles Debierre - Lille</h2>
                         </div>
+                        <div class="col-sm d-block d-sm-none">
+                            <hr style="border: 1px solid #A93514"/>
+                        </div>
                         <div class="col my-auto">
                             <h2>SALLE DEFAUCOMPRET</h2>
                             <div class="iframe-outer">
