--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Lille Judo{% endblock %}</title>
+        <meta name="description" content="Créée en 1950, la section Judo eut du mal à se développer faute de salles. Animée par des étudiants Ceinture Noire, apôtres du Judo et dévoués à son développement, la section se pérennisa cependant.
+        En 1961, les cours se faisaient dans une arrière salle de café. L'arrivée des Professeurs d'E.P.S. permit de relancer la discipline en même temps que s'ouvraient deux salles de sport universitaire.
+        Par la suite, une autre salle de judo fut construite à DEBEYRE pour s'achever dans une très belle et grande salle dans le même gymnase. Le Judo était devenue majeur.
+        Grâce au partenariat de la ville de Lille et au comité en place, le club s'ouvre sur Lille Fives grâce au nouveau DOJO DEFAUCOMPRET situé rue du Long Pot.">
+        <meta name="keywords" content="judo jujitsu ju-jitsu taiso newaza ne-waza lille nord université club compétitions
+        tatami ceinture kimono judogi jigoro kano art martial activité sportive karaté judoka sport ceinture bkanche orange
+        jaune vert bleu marron noire 1er dan 2e dan 3e dan Teddy Riner salle de sport jeux olympique médaille hadjime arts martiaux
+        sports de comabt combat championnat trophé">
         <link rel="shortcut icon" type="image/ico" href="{{ asset('assets/favicon.ico') }}"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
@@ -168,11 +176,6 @@
                             </h1>
                         </div>
                     </div>
-                </div>
-                <div class="container-fluid d-lg-block d-none text-center">
-                    <img src="{{ asset('assets/800px-Ceinture_noire.png') }}"
-                         height="100"
-                         alt="Ceinture Noire">
                 </div>
                 <div class="container-fluid d-md-block d-none">
                     <div class="row text-center justify-content-center">
