--- a/templates/disciplines/ju-jitsu.html.twig
+++ b/templates/disciplines/ju-jitsu.html.twig
@@ -85,16 +85,16 @@
                 <div class="container">
                     <div class="row text-center justify-content-center">
                         <div class="col my-auto">
-                            <h2>SALLE DEBEYRE</h2>
+                            <h2>SALLES DE SPORT C.O.S.E.C</h2>
                             <div class="iframe-outer">
                                 <div class="iframe-inner">
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.75805227567!2d3.071911315859676!3d50.63161128217546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d58ccd84a095%3A0x2bf07e00b55a0265!2sSalle%20Debeyre!5e0!3m2!1sfr!2sfr!4v1595951862220!5m2!1sfr!2sfr"
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10128.551076061387!2d3.1449705!3d50.6059775!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe5990a0bf9562e04!2sSALLES%20DE%20SPORT%20C.O.S.E.C!5e0!3m2!1sfr!2sfr!4v1600345049264!5m2!1sfr!2sfr"
                                             class="embed-responsive-item"
                                             allowfullscreen>
                                     </iframe>
                                 </div>
                             </div>
-                            <h2>156 rue Charles Debierre - Lille</h2>
+                            <h2>Université de Lille - Campus Cité scientifique</h2>
                         </div>
                     </div>
                 </div>
