[~] rerite http to https in a few templates

--- a/templates/club/enseignants-show.html.twig
+++ b/templates/club/enseignants-show.html.twig
@@ -24,7 +24,7 @@
                          alt="">
                 {% else %}
                     <img class="rounded-circle img-fluid"
-                         src="http://placehold.it/300x300"
+                         src="https://placehold.it/300x300"
                          width="300"
                          height="300"
                          alt="">
