--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,8 @@
         <meta name="keywords" content="judo jujitsu ju-jitsu taiso newaza ne-waza lille nord université club compétitions
         tatami ceinture kimono judogi jigoro kano art martial activité sportive karaté judoka sport ceinture bkanche orange
         jaune vert bleu marron noire 1er dan 2e dan 3e dan Teddy Riner salle de sport jeux olympique médaille hadjime arts martiaux
-        sports de comabt combat championnat trophé">
+        sports de comabt combat championnat trophé nord nord-pas-de-calais lille roubaix tourcoing croix la madeleine marcq-en-barœul wattrelos wasquehal
+        villeneuve d'ascq MEL métropole européenne lilloise hauts-de-france federation francaise de judo ffj ffjudo">
         <link rel="shortcut icon" type="image/ico" href="{{ asset('assets/favicon.ico') }}"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
@@ -48,7 +49,7 @@
                 border-color: black !important;
             }
             .custom-toggler .navbar-toggler-icon {
-                background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+                background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='https://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
             }
             .custom-toggler.navbar-toggler {
                 border-color: black;
