--- a/templates/boutique/index.html.twig
+++ b/templates/boutique/index.html.twig
@@ -26,7 +26,7 @@
             {% else %}
                 <div class="col-lg-4">
                     <img class="img-fluid img-thumbnail"
-                         src="http://placehold.it/140x140"
+                         src="https://placehold.it/140x140"
                          alt="">
                     <p>
                         no records found
