--- a/templates/club/bureau.html.twig
+++ b/templates/club/bureau.html.twig
@@ -15,7 +15,7 @@
                              alt="">
                     {% else %}
                         <img class="rounded-circle"
-                             src="http://placehold.it/140x140"
+                             src="https://placehold.it/140x140"
                              width="140"
                              height="140"
                              alt="">
