--- a/templates/club/enseignants.html.twig
+++ b/templates/club/enseignants.html.twig
@@ -16,7 +16,7 @@
                              alt="">
                     {% else %}
                         <img class="rounded-circle"
-                             src="http://placehold.it/140x140"
+                             src="https://placehold.it/140x140"
                              width="140"
                              height="140"
                              alt="">
@@ -33,7 +33,7 @@
             {% else %}
                 <div class="col-lg-4">
                     <img class="rounded-circle"
-                         src="http://placehold.it/140x140"
+                         src="https://placehold.it/140x140"
                          width="140"
                          height="140"
                          alt="">
