--- a/templates/actualites/actualites-nationale-internationale-show.html.twig
+++ b/templates/actualites/actualites-nationale-internationale-show.html.twig
@@ -2,10 +2,60 @@
 
 {% block title %}Actualités - Lille Judo{% endblock %}
 
+{% block stylesheets %}
+    <style>
+        .carousel-inner > .carousel-item {
+            height: 65vh;
+        }
+        .carousel-inner-little > .carousel-item {
+            height: 32vh;
+        }
+        .carousel-inner > .carousel-item > a > img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            max-height: 800px;
+            width: auto;
+        }
+        .carousel-inner-little > .carousel-item > a > img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            max-height: 220px;
+            object-fit: scale-down;
+            width: auto;
+        }
+        .carousel-control-prev-icon, .carousel-control-next-icon {
+            height: 100px;
+            width: 100px;
+            outline: black;
+            background-size: 100%, 100%;
+            border-radius: 50%;
+            background-image: none;
+        }
+        .carousel-control-next-icon:after {
+            content: '>';
+            font-size: 55px;
+            color: #A93514;
+        }
+        .carousel-control-prev-icon:after {
+            content: '<';
+            font-size: 55px;
+            color: #A93514;
+        }
+    </style>
+{% endblock %}
+
 {% block body %}
     <div class="container">
         {% if firstImage and post.images.count != 1 %}
-            <div id="carouselPostClub" class="carousel slide" data-ride="carousel">
+            <div id="carouselPostClub" class="carousel slide d-none d-md-block" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#{{ firstImage }}" data-slide-to="0" class="active"></li>
                     {% for postImage in post.images|slice(1, post.images.count) %}
@@ -13,6 +63,32 @@
                     {% endfor %}
                 </ol>
                 <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="img-fluid d-block w-100" src="{{ asset('uploads/natio/') }}{{ firstImage }}" alt="">
+                    </div>
+                    {% for postImage in post.images|slice(1, post.images.count) %}
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="{{ asset('uploads/natio/') }}{{ postImage.image }}" alt="">
+                        </div>
+                    {% endfor %}
+                </div>
+                <a class="carousel-control-prev" href="#carouselPostClub" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselPostClub" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <div id="carouselPostClub2" class="carousel slide d-block d-md-none" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#{{ firstImage }}" data-slide-to="0" class="active"></li>
+                    {% for postImage in post.images|slice(1, post.images.count) %}
+                        <li data-target="#{{ postImage.id }}" data-slide-to="{{ postImage.id }}"></li>
+                    {% endfor %}
+                </ol>
+                <div class="carousel-inner-little">
                     <div class="carousel-item active">
                         <img class="img-fluid d-block w-100" src="{{ asset('uploads/natio/') }}{{ firstImage }}" alt="">
                     </div>
