--- a/templates/disciplines/ne-waza.html.twig
+++ b/templates/disciplines/ne-waza.html.twig
@@ -26,6 +26,12 @@
 
 {% block body %}
     <div class="container">
+        <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+            <strong>Attention!</strong> Cette page est encore en construction.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
         <ul class="nav nav-tabs flex-column flex-lg-row" id="newazaTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="histoireValeurs-tab" data-toggle="tab" href="#histoireValeurs" aria-controls="histoireValeurs" aria-selected="true">Histoire et Valeurs</a>
