update admin competition show

--- a/templates/inscription/admin-competitions-show.html.twig
+++ b/templates/inscription/admin-competitions-show.html.twig
@@ -13,6 +13,7 @@
                 <tr>
                     <th>Nom</th>
                     <th>Prenom</th>
+                    <th>Club</th>
                     <th>Sexe</th>
                     <th>Poids</th>
                     <th>Date de naissance</th>
@@ -25,6 +26,7 @@
                     <tr>
                         <td>{{ inscrit.nom }}</td>
                         <td>{{ inscrit.prenom }}</td>
+                        <td>{{ inscrit.club }}</td>
                         <td>{{ inscrit.sexe }}</td>
                         <td>{{ inscrit.poids }}</td>
                         <td>{{ inscrit.dateNaissance|date('d/m/Y') }}</td>
